Downgrade client to build with Java 8
Signed-off-by: Harsha Vamsi Kalluri <harshavamsi096@gmail.com>